# estafette

./: .gitignore  README.md  REUSE.toml  pyproject.toml  run-report.json  transfer.yaml
.github/workflows/: ci.yml  pages.yml
.habitat/: audit.jsonl  run-output-builder-apply-docs-contract-20260712-184214.md  run-output-reviewer-apply-docs-contract-20260712-184718.md  run-report-builder-apply-docs-contract-20260712-184214.html  run-report-reviewer-apply-docs-contract-20260712-184718.html
catalog/: estafette.yaml
docs/: catalog-spec.md  index.md  manifest-spec.md  tiers.md
docs/reference/: catalog-spec.md  manifest-spec.md  tiers.md
openspec/: project.md
openspec/changes/apply-docs-contract/: tasks.md
openspec/changes/catalogue-v1/: design.md  tasks.md
openspec/changes/checks-static-v1/: design.md  proposal.md  tasks.md
openspec/changes/dogfood-v1/: proposal.md  tasks.md
openspec/changes/entry-model-v1/: design.md  tasks.md
openspec/changes/harness-v1/: design.md  proposal.md  tasks.md
openspec/changes/init-core-v1/: design.md  tasks.md
reports/: README.md
reports/50a9e694a1a4/: report.json  report.md
src/estafette/: __init__.py  assessment.py  catalogue.py  cli.py  entry.py  manifest.py  report.py  tier.py
tests/: conftest.py  test_assessment.py  test_catalogue.py  test_classify.py  test_cli.py  test_deps_reality.py  test_entry.py  test_licence_consistency.py  test_manifest.py  test_manifest_build.py  test_podman.py  test_report.py  test_reuse.py  test_sbom.py  test_secrets.py  test_silver_preview.py  test_tier.py  test_tooling.py
(+45 files in other folders)
